# fast

./: .env.example  .env.local.example  .env.prod.example  .env.test.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.codex/skills/fastapi-mall-enterprise/: SKILL.md
alembic/: env.py
alembic/versions/: 20260318_0001_initial_schema.py
app/: cli.py  main.py
app/api/: deps.py
app/bootstrap/: app.py  diagnostics.py  exception_handlers.py  lifespan.py  logging.py  middleware.py
app/config/: __init__.py  app.py  cache.py  database.py  helpers.py  integrations.py  loader.py  schema.py  server.py
app/core/: config.py  constants.py  database.py  enums.py  exceptions.py  redis.py  response.py  security.py  types.py
app/core/config/: __init__.py  app.py  helpers.py  integrations.py  loader.py  server.py  settings.py  storage.py  types.py
app/db/: base.py
app/db/migrations/: env.py
app/infra/cache/: __init__.py  redis.py
app/infra/db/: __init__.py  base.py  registry.py  session.py
app/infra/security/: __init__.py  token.py
app/integrations/push/: client.py
app/integrations/sms/: client.py
app/tasks/: celery_app.py  notify_tasks.py  order_tasks.py  payment_tasks.py  report_tasks.py
app/tests/: test_health.py
app/utils/: crud.py  pagination.py
docker/: Dockerfile
docs/: api-overview.md  architecture.md  database-design.md  desgin.md  uv-usage.md  技术栈.md  账号体系.md  路由设计.md  项目目录.md
scripts/: dev.sh  init_demo.py  migrate.sh  seed_demo.py
tests/: test_config.py  test_health.py  test_observability.py
(+70 files in other folders)
