[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-mall-enterprise-starter"
version = "0.1.0"
description = "FastAPI starter for mall + enterprise admin + WeChat mini program"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "redis>=5.0,<6.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "orjson>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "celery[redis]>=5.4,<6.0",
  "structlog>=24.1,<25.0",
  "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "black>=24.4,<25.0",
  "isort>=5.13,<6.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
